TAG: lib_py_littriage-6-0-11-11
DATE: 03/01/2018
STAFF: sc
CHANGES:
1) TR12786 PubMedAgent add eutils api_key

TAG: lib_py_littriage-6-0-11-10
DATE: 02/27/2018
STAFF: lec
CHANGES:
1) TR12787/add JOURNAL_DOI_RE check for J Dent Res and other
10.1177 journals

TAG: lib_py_littriage-6-0-11-9
DATE: 12/27/2017
STAFF: lec
CHANGES:
1) TR12747 - add 'PT'/publicationType to PubMedAgent.py

TAG: lib_py_littriage-6-0-11-8
DATE: 12/18/2017
STAFF: sc
CHANGES:
1) TR12727 - parsing PNAS doiIDs with no '/'
2) TR12739 - differentiating btwn  10.1126/science
    and  10.1126/scitranslmed

TAG: lib_py_littriage-6-0-11-7
TAG: lib_py_littriage-6-0-11-6
DATE: 12/11/2017
STAFF: lec
CHANGES: TR12705 LTLO: refresh info from NLM
1) PubMedAgent.py : AID check; find() needs to check find() > 0

TAG: lib_py_littriage-6-0-11-5
DATE: 12/07/2017
STAFF: sc
CHANGES: TR12705 LTLO: refresh info from NLM
1) comment out debug

TAG: lib_py_littriage-6-0-11-4
DATE: 12/07/2017
STAFF: sc
CHANGES: TR12705 LTLO: refresh info from NLM
1) add doId to reference object getter/setter, parse from medline

TAG: littriageload-6-0-11-2
TAG: littriageload-6-0-11-1
DATE: 10/04/2017, 10/09/2017
STAFF: lec 
CHANGES:
TR12250/Lit Triage project

TAG: none
DATE: 6/30/2017
STAFF: sc
CHANGES:
1) Implemented stub for medline format

TAG: none
DATE: 6/1/2017
STAFF: jsb
CHANGES:
